feat: 添加 GFW 列表管理和服务控制优化
- 新增 GFW 列表管理功能（多源下载、定时更新）
- 新增 DNS 防污染（通过 dns2socks 代理 DNS 查询）
- 新增 echworkers-control 服务控制脚本
- 修复服务启停控制问题（使用 ubus service delete）
- 修复包卸载时卡住的问题（stop_service 异步执行）
- 优化 LuCI 界面状态实时更新（2秒轮询）
- 中文化 GFW 列表脚本输出信息
- 更新 ACL 权限配置

--- a/luci-app-echworkers/Makefile
+++ b/luci-app-echworkers/Makefile
@@ -2,13 +2,23 @@ include $(TOPDIR)/rules.mk
 
 LUCI_TITLE:=LuCI support for ECH Workers
 LUCI_DESCRIPTION:=ECH (Encrypted Client Hello) Workers proxy client with smart routing
-LUCI_DEPENDS:=+luci-base +ech-workers
+LUCI_DEPENDS:=+luci-base +ech-workers +dns2socks
 LUCI_PKGARCH:=all
 
 PKG_VERSION:=1.0.0
-PKG_RELEASE:=2
+PKG_RELEASE:=3
 
 include $(TOPDIR)/feeds/luci/luci.mk
 
-# call BuildPackage - OpenWrt buildance
+define Package/luci-app-echworkers/postinst
+#!/bin/sh
+[ -n "$${IPKG_INSTROOT}" ] || {
+	chmod +x /usr/bin/echworkers-gfwlist 2>/dev/null
+	chmod +x /usr/bin/echworkers-control 2>/dev/null
+	chmod +x /etc/init.d/echworkers 2>/dev/null
+	/etc/init.d/echworkers enable 2>/dev/null
+}
+exit 0
+endef
+
 $(eval $(call BuildPackage,luci-app-echworkers))
