fix: LuCI服务控制和状态显示问题
主要修复:
1. 重写 echworkers-control 直接启动进程，不调用 init 脚本（避免 procd 阻塞）
2. 修复 getServiceStatus 使用 fs.exec_direct 检查进程状态
3. 修复 handleSaveApply 时序问题，确保 UCI 配置先保存再执行 restart
4. 添加 ech-workers 进程输出重定向到 syslog
5. 修复 gfwlist 路径为 /etc/echworkers/gfwlist.conf
6. 使用 killall -HUP dnsmasq 替代 dnsmasq restart 避免网络中断

测试通过场景:
- 场景1: 禁用服务 (enabled=0)
- 场景2: 启用服务但禁用透明代理 (enabled=1, transparent=0)
- 场景3: 启用服务并启用透明代理 (enabled=1, transparent=1)
- 场景4: 从场景3切换到场景2（关闭透明代理）
- 所有场景网络连通性正常

版本: 1.0.0-r4

--- a/luci-app-echworkers/root/usr/share/rpcd/acl.d/luci-app-echworkers.json
+++ b/luci-app-echworkers/root/usr/share/rpcd/acl.d/luci-app-echworkers.json
@@ -3,14 +3,16 @@
 		"description": "Grant access to ECH Workers configuration",
 		"read": {
 			"file": {
-				"/etc/init.d/echworkers": [ "read" ],
+				"/etc/init.d/echworkers": [ "read", "exec" ],
 				"/sbin/logread": [ "exec" ],
 				"/usr/bin/echworkers-gfwlist": [ "exec" ],
 				"/usr/bin/echworkers-control": [ "exec" ],
 				"/etc/echworkers/*": [ "read" ]
 			},
+			"cgi-io": [ "exec" ],
 			"ubus": {
-				"service": [ "list", "delete" ]
+				"service": [ "list", "delete" ],
+				"file": [ "exec" ]
 			},
 			"uci": [ "echworkers" ]
 		},
@@ -20,6 +22,10 @@
 				"/usr/bin/echworkers-gfwlist": [ "exec" ],
 				"/usr/bin/echworkers-control": [ "exec" ],
 				"/etc/echworkers/*": [ "write" ]
+			},
+			"cgi-io": [ "exec" ],
+			"ubus": {
+				"file": [ "exec" ]
 			},
 			"uci": [ "echworkers" ]
 		}
